# agent-harness-lab

./: .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  README_CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
docs/: README.md  agent-authoring-guide.md  architecture.md  claude-code-handoff.md  copilot-setup-productization.md  copilot-setup.md  design-v0.1.md  design-v0.2.md  design-v0.3.md  design-v0.4.1.md  design-v0.4.md  evidence-aware-result.md  evidence-guide.md  file-formats.md  handoff.md  harness-package-mvp.md  migrating-from-ahl.md  migration-from-v0.10.0-to-v1.md  open-source-readiness-freeze.md  product-acceptance-checklist.md  product-definition.md  product-flow-completion.md  product-modes.md  product-reliability-evidence-hardening.md  product-walkthrough.md  public-launch-checklist.md  quickstart.md  roadmap.md  runtime-materialization-m1-spec.md  runtime-materialization.md  runtime-probe-mvp.md  v1-concept-inventory.md  v1-phase1-status.md  v2-minimal-spec.md
docs/handoffs/: phase-1-to-3-summary.md  release-v0.2.0-summary.md
docs/v1-spec/: cli.md  execution-model.md  experiment-structure.md  experiment-yaml-schema.md  product-definition.md
examples/: README.md  cli_agent.py  http_stateful_agent.py  http_stateless_agent.py  library_agent.py
examples/auto-optimize-copy-lite/: README.md  goal.md
examples/auto-optimize-copy-lite/evaluation-methods/: benchmark.md
examples/auto-run-local-cli-lite/: README.md  goal.md
examples/auto-run-local-cli-lite/evaluation-methods/: benchmark.md
examples/copilot-setup-example/: README.md  goal.md
examples/evidence-examples/: README.md  cloud-evidence.md  harness-evidence.md  runtime-evidence.md
examples/memory-policy-ab-lite/: README.md
examples/sample-workspace/: README.md  goal.md  runtime-sources.md
scripts/: verify_public_completion.sh  verify_public_mvp.sh
src/agent_harness_lab/: __init__.py  __main__.py  agentconn.py  auto.py  auto_optimize.py  brief.py  cli.py  compare.py  conclude.py  connect.py  copilot.py  evaluation.py  evidence.py  experiment_spec.py  experiment_templates.py  grader.py  harness_package.py  hash_utils.py  inspector.py  llm.py  markdown_html.py  materialize_v1.py  mdutil.py  patch.py  probe.py  program.py  report.py  report_builder.py  reviewer.py  rubric.py  runner.py  runtime_source.py  scaffold.py  simulator.py  snapshot.py  templates.py  testset.py  user_sim.py  version.py  workflow.py
src/harness_design_loop/: __init__.py  __main__.py  agentconn.py  brief.py  cli.py  comparator.py  connect.py  designer.py  grader.py  llm.py  models.py  program.py  report.py  rubric.py  runner.py  simulator.py  templates.py  testset.py  version.py  workflow.py
src/harness_design_loop/core/: run.py  (+3 more)
tests/: __init__.py  contracts.py  fakes.py  githelper.py  test_agentconn.py  test_auto_optimize_v1.py  test_auto_v1.py  test_ci_workflow.py  test_cli_v1_surface.py  test_cmd_draft_redirect.py  test_cmd_init.py  test_cmd_init_v1.py  test_cmd_new.py  test_cmd_new_v1.py  test_cmd_review.py  test_cmd_run_status_report_v1.py  test_cmd_walkthrough.py  test_comparator.py  test_completion_path_v1.py  test_contract_self.py  test_copilot_setup_example.py  test_copilot_templates.py  test_copilot_v1.py  test_core.py  test_designer.py  test_doc_consistency.py  test_docs_v11_multiturn.py  test_e2e.py  test_eval_v1.py  test_evaluation_v1.py  test_evidence.py  test_evidence_integration.py  test_examples_e2e.py  test_experiment_spec.py  test_harness_package.py  test_harness_package_e2e.py  test_harness_package_integration.py  test_hash_utils.py  test_inspector_v1.py  test_llm_rubric_v1.py  (+29 more)
(+58 files in other folders)
