[project]
name = "agent-harness-lab"
version = "0.8.0"
description = "A workflow tool for designing, testing, and improving agent runtime harnesses."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ahl = "agent_harness_lab.cli:main"
hdl = "agent_harness_lab.cli:hdl_legacy_redirect"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
