[project]
name = "agent-harness-lab"
version = "0.9.0"
description = "A workflow tool for designing, testing, and improving agent runtime harnesses."
requires-python = ">=3.10"
dependencies = []
license = { text = "MIT" }
authors = [
  { name = "Kun" },
]
keywords = [
  "agent",
  "harness",
  "evaluation",
  "ai",
  "llm",
  "experiment",
  "agent-evaluation",
  "prompt-engineering",
  "agentic",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Kun-0546/agent-harness-lab"
Repository = "https://github.com/Kun-0546/agent-harness-lab"
Issues = "https://github.com/Kun-0546/agent-harness-lab/issues"
Changelog = "https://github.com/Kun-0546/agent-harness-lab/blob/main/CHANGELOG.md"

[project.scripts]
ahl = "agent_harness_lab.cli:main"
hdl = "agent_harness_lab.cli:hdl_legacy_redirect"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
