[project]
name = "agent-harness-lab"
version = "1.0.0.dev0"
description = "Run goal-driven harness experiments on real Agent Runtimes."
# Python 3.13 is NOT yet supported: a reviewer reported an intermittent test-suite
# hang on 3.13.5 that could not be reproduced or fixed with confidence. Pinned out
# until it is resolved and verified on a 3.13.x environment.
requires-python = ">=3.10,<3.13"
dependencies = [
  "pyyaml>=6.0",
]
license = { text = "MIT" }
authors = [
  { name = "Kun" },
]
keywords = [
  "agent",
  "harness",
  "evaluation",
  "ai",
  "llm",
  "experiment",
  "agent-evaluation",
  "prompt-engineering",
  "agentic",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Kun-0546/agent-harness-lab"
Repository = "https://github.com/Kun-0546/agent-harness-lab"
Issues = "https://github.com/Kun-0546/agent-harness-lab/issues"
Changelog = "https://github.com/Kun-0546/agent-harness-lab/releases"

[project.scripts]
hlab = "agent_harness_lab.cli:main"
ahl = "agent_harness_lab.cli:ahl_redirect"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
